--- a/_2_HelloAndroid/KekodLessonOne/app/src/main/res/layout/activity_fourth_constraint_layout.xml
+++ b/_2_HelloAndroid/KekodLessonOne/app/src/main/res/layout/activity_fourth_constraint_layout.xml
@@ -9,15 +9,12 @@
     tools:context=".FourthActivity">
 
     <TextView
-        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="Hello World!"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
