--- a/_2_HelloAndroid/_17_KekodJetpackNavigation/app/src/main/res/values/themes.xml
+++ b/_2_HelloAndroid/_17_KekodJetpackNavigation/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.KekodAppNavigation" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.KekodJetpackNavigation" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.KekodAppNavigation" parent="Base.Theme.KekodAppNavigation" />
+    <style name="Theme.KekodJetpackNavigation" parent="Base.Theme.KekodJetpackNavigation" />
 </resources>
